--- a/index.html
+++ b/index.html
@@ -1,91 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Planner Support 4U</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PlannerSupport4U | Microsoft 365 Expert Help</title>
+
+    <!-- CSS LINK -->
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
 
-  <!-- Navigation -->
-  <header class="navbar">
-    <h2 class="logo">PlannerSupport4U</h2>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+    <!-- NAVBAR -->
+    <nav class="navbar">
+        <div class="logo">PlannerSupport4U</div>
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </nav>
-  </header>
 
-  <!-- HERO SECTION -->
-  <section class="hero">
-    <h1>Microsoft Planner & Office 365 Support</h1>
-    <p>Fast, reliable troubleshooting for all your Microsoft 365 applications.</p>
-    <a href="contact.html" class="btn">Get Help Now</a>
-  </section>
+    <!-- HERO SECTION -->
+    <header class="hero">
+        <h1>Microsoft Planner & Office 365 Support</h1>
+        <p>Fast, reliable troubleshooting for all your Microsoft 365 applications.</p>
+        <a class="btn" href="contact.html">Get Help Now</a>
+    </header>
 
-  <!-- SERVICES -->
-  <section class="section">
-    <h2 class="section-title">What I Can Help You With</h2>
-    <div class="cards">
+    <!-- SERVICES SECTION -->
+    <section class="section">
+        <h2 class="section-title">What I Can Help You With</h2>
 
-      <div class="card">
-        <h3>Planner Task Issues</h3>
-        <p>Fix task syncing, update problems, and assignment issues.</p>
-      </div>
+        <div class="cards">
 
-      <div class="card">
-        <h3>Office 365 Errors</h3>
-        <p>Outlook, Excel, Word, Teams — full troubleshooting support.</p>
-      </div>
+            <div class="card">
+                <h3>Planner Task Issues</h3>
+                <p>Fix task syncing, update problems, and assignment issues.</p>
+            </div>
 
-      <div class="card">
-        <h3>Automations</h3>
-        <p>Power Automate flows for task creation, updates, and reminders.</p>
-      </div>
+            <div class="card">
+                <h3>Office 365 Errors</h3>
+                <p>Outlook, Excel, Word, Teams — full troubleshooting support.</p>
+            </div>
 
-    </div>
-  </section>
+            <div class="card">
+                <h3>Automations</h3>
+                <p>Power Automate flows for task creation, updates, and reminders.</p>
+            </div>
 
-  <!-- PRICING -->
-  <section class="section pricing">
-    <h2 class="section-title">Pricing</h2>
+        </div>
+    </section>
 
-    <div class="price-box">
-      <h3>One-on-One Support</h3>
-      <p class="price">₹499</p>
-      <p>Per session — includes troubleshooting, guidance, and setup help.</p>
-      <a href="contact.html" class="btn">Book a Session</a>
-    </div>
+    <!-- PRICING -->
+    <section class="section pricing">
+        <h2 class="section-title">Pricing</h2>
 
-  </section>
+        <div class="price-box">
+            <h3>One-on-One Support</h3>
+            <p class="price">₹499</p>
+            <p>Per session — includes troubleshooting, guidance, and setup help.</p>
+            <a class="btn" href="contact.html">Book a Session</a>
+        </div>
+    </section>
 
-  <!-- FAQ -->
-  <section class="section">
-    <h2 class="section-title">FAQ</h2>
+    <!-- FAQ -->
+    <section class="section">
+        <h2 class="section-title">FAQ</h2>
 
-    <div class="faq-box">
-      <h4>How do sessions take place?</h4>
-      <p>Through screen sharing and guided support.</p>
-    </div>
+        <div class="faq-box">
+            <h3>How do sessions take place?</h3>
+            <p>Through screen sharing and guided support.</p>
+        </div>
 
-    <div class="faq-box">
-      <h4>Do I need to install anything?</      h4>
-      <p>No, everything is done using Microsoft 365 and browser tools.</p>
-    </div>
+        <div class="faq-box">
+            <h3>Do I need to install anything?</h3>
+            <p>No, everything is done using Microsoft 365 and browser tools.</p>
+        </div>
 
-    <div class="faq-box">
-      <h4>What if my issue is not solved?</h4>
-      <p>You only pay if the solution works — full satisfaction guarantee.</p>
-    </div>
-  </section>
+        <div class="faq-box">
+            <h3>What if my issue is not solved?</h3>
+            <p>You only pay if the solution works — full satisfaction guarantee.</p>
+        </div>
+    </section>
 
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2025 PlannerSupport4U — All Rights Reserved.</p>
-  </footer>
+    <!-- FOOTER -->
+    <footer>
+        © 2025 PlannerSupport4U — All Rights Reserved.
+    </footer>
 
 </body>
 </html>
