Revamp About page with new structure and content
Updated the About page layout and content.

--- a/about.html
+++ b/about.html
@@ -1,37 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About | Planner Support 4U</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About | PlannerSupport4U</title>
+
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-  <header class="navbar">
-    <h2 class="logo">PlannerSupport4U</h2>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+
+    <!-- NAVBAR -->
+    <nav class="navbar">
+        <div class="logo">PlannerSupport4U</div>
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="about.html" class="active">About</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </nav>
-  </header>
 
-  <section class="section">
-    <h1 class="section-title">About Me</h1>
-    <p>
-      I specialize in resolving Microsoft Planner and Office 365 issues with more than 
-      <strong>8 years of experience</strong> helping individuals and teams improve productivity.
-    </p>
+    <!-- ABOUT HEADER -->
+    <section class="hero">
+        <h1>About PlannerSupport4U</h1>
+        <p>Your trusted expert for Microsoft Planner and Office 365 support.</p>
+    </section>
 
-    <p>
-      My goal is to make task management smooth, error-free, and efficient for everyone —
-      whether you're a student, professional, or business.
-    </p>
-  </section>
+    <!-- ABOUT CONTENT -->
+    <section class="section">
+        <h2 class="section-title">Who I Am</h2>
 
-  <footer>
-    <p>© 2025 PlannerSupport4U — All Rights Reserved.</p>
-  </footer>
+        <div class="about-box">
+            <p>
+                I specialize in fixing Microsoft 365 issues — especially Microsoft Planner,
+                Power Automate, Teams, Outlook, Excel, and other Office apps.
+            </p>
+
+            <p>
+                With strong expertise in task automation, workflow optimization, and
+                troubleshooting, I help users solve their issues quickly and efficiently.
+            </p>
+
+            <p>
+                My goal is simple:  
+                <strong>To provide fast, reliable, and stress-free support so you can continue working without interruptions.</strong>
+            </p>
+        </div>
+    </section>
+
+    <!-- WHY CHOOSE ME -->
+    <section class="section">
+        <h2 class="section-title">Why Choose PlannerSupport4U?</h2>
+
+        <div class="cards">
+
+            <div class="card">
+                <h3>Fast Support</h3>
+                <p>Most issues resolved within minutes over screen sharing.</p>
+            </div>
+
+            <div class="card">
+                <h3>Expert Knowledge</h3>
+                <p>Planner, Power Automate, Outlook, Teams, OneDrive — full Microsoft 365 ecosystem.</p>
+            </div>
+
+            <div class="card">
+                <h3>Guaranteed Satisfaction</h3>
+                <p>If I can't solve your issue, you don’t pay anything.</p>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        © 2025 PlannerSupport4U — All Rights Reserved.
+    </footer>
+
 </body>
 </html>
