--- a/contact.html
+++ b/contact.html
@@ -1,42 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | Planner Support 4U</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact | PlannerSupport4U</title>
+
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-  <header class="navbar">
-    <h2 class="logo">PlannerSupport4U</h2>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+
+    <!-- NAVBAR -->
+    <nav class="navbar">
+        <div class="logo">PlannerSupport4U</div>
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html" class="active">Contact</a>
+        </div>
     </nav>
-  </header>
 
-  <section class="section">
-    <h1 class="section-title">Get in Touch</h1>
+    <!-- CONTACT HEADER -->
+    <section class="hero">
+        <h1>Get in Touch</h1>
+        <p>Need help with Microsoft Planner or Office 365? Send a message below.</p>
+    </section>
 
-    <form class="contact-form" action="#" method="POST">
-      <label>Name</label>
-      <input type="text" required />
+    <!-- CONTACT FORM SECTION -->
+    <section class="section">
+        <h2 class="section-title">Contact Me</h2>
 
-      <label>Email</label>
-      <input type="email" required />
+        <div class="contact-form">
+            <form action="https://formspree.io/f/mgejqyqr" method="POST">
 
-      <label>Your Issue</label>
-      <textarea required></textarea>
+                <input type="text" name="name" placeholder="Your Name" required>
 
-      <button type="submit" class="btn">Send Message</button>
-    </form>
+                <input type="email" name="email" placeholder="Your Email" required>
 
-  </section>
+                <textarea name="message" rows="5" placeholder="Describe your issue..." required></textarea>
 
-  <footer>
-    <p>© 2025 PlannerSupport4U — All Rights Reserved.</p>
-  </footer>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+
+        <br><br>
+        
+        <p style="text-align:center; font-size:1rem; color:#555;">
+            Or email directly at:<br>
+            <strong>seannroberts754@gmail.com</strong>
+        </p>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        © 2025 PlannerSupport4U — All Rights Reserved.
+    </footer>
+
 </body>
 </html>
