Revamp About page with new content and structure
Updated the About page layout and content to reflect new branding and experience.

--- a/about.html
+++ b/about.html
@@ -4,78 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | PlannerSupport4U</title>
-
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
 
-    <!-- NAVBAR -->
-    <nav class="navbar">
-        <div class="logo">PlannerSupport4U</div>
-        <div class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="about.html" class="active">About</a>
-            <a href="contact.html">Contact</a>
-        </div>
+<!-- NAVBAR -->
+<header class="navbar">
+    <div class="logo">PlannerSupport4U</div>
+    <nav class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="about.html" class="active">About</a>
+        <a href="contact.html">Contact</a>
     </nav>
+</header>
 
-    <!-- ABOUT HEADER -->
-    <section class="hero">
-        <h1>About PlannerSupport4U</h1>
-        <p>Your trusted expert for Microsoft Planner and Office 365 support.</p>
-    </section>
+<!-- ABOUT SECTION -->
+<section class="hero small-hero">
+    <h1>About Me</h1>
+    <p>Your trusted Microsoft Planner & Office 365 Support Expert</p>
+</section>
 
-    <!-- ABOUT CONTENT -->
-    <section class="section">
-        <h2 class="section-title">Who I Am</h2>
+<section class="section about-section">
+    <div class="about-container">
+        <h2>My Experience</h2>
+        <p>
+            With <strong>8+ years of hands-on expertise</strong> in Microsoft Planner, Office 365 Admin Center, 
+            Power Automate, Teams, SharePoint, Outlook, and task management automation —  
+            I help individuals and businesses resolve issues fast and effectively.
+        </p>
 
-        <div class="about-box">
-            <p>
-                I specialize in fixing Microsoft 365 issues — especially Microsoft Planner,
-                Power Automate, Teams, Outlook, Excel, and other Office apps.
-            </p>
+        <p>
+            Whether it's fixing Planner task syncing errors, setting up automated flows,
+            resolving Office 365 application issues, or providing guided one-on-one training —  
+            I ensure results that are clear, quick, and reliable.
+        </p>
+    </div>
 
-            <p>
-                With strong expertise in task automation, workflow optimization, and
-                troubleshooting, I help users solve their issues quickly and efficiently.
-            </p>
+    <div class="about-container">
+        <h2>Why Clients Trust Me</h2>
+        <ul class="about-list">
+            <li>✔ Fast problem diagnosis</li>
+            <li>✔ Step-by-step guidance</li>
+            <li>✔ Proven results with 100% satisfaction</li>
+            <li>✔ Support for Outlook, Teams, Planner & more</li>
+            <li>✔ Expert in automating workflows with Power Automate</li>
+        </ul>
+    </div>
 
-            <p>
-                My goal is simple:  
-                <strong>To provide fast, reliable, and stress-free support so you can continue working without interruptions.</strong>
-            </p>
-        </div>
-    </section>
+    <a href="contact.html" class="btn">Book Support Session</a>
+</section>
 
-    <!-- WHY CHOOSE ME -->
-    <section class="section">
-        <h2 class="section-title">Why Choose PlannerSupport4U?</h2>
+<!-- FOOTER -->
+<footer>
+    © 2025 PlannerSupport4U — All Rights Reserved.
+</footer>
 
-        <div class="cards">
-
-            <div class="card">
-                <h3>Fast Support</h3>
-                <p>Most issues resolved within minutes over screen sharing.</p>
-            </div>
-
-            <div class="card">
-                <h3>Expert Knowledge</h3>
-                <p>Planner, Power Automate, Outlook, Teams, OneDrive — full Microsoft 365 ecosystem.</p>
-            </div>
-
-            <div class="card">
-                <h3>Guaranteed Satisfaction</h3>
-                <p>If I can't solve your issue, you don’t pay anything.</p>
-            </div>
-
-        </div>
-    </section>
-
-    <!-- FOOTER -->
-    <footer>
-        © 2025 PlannerSupport4U — All Rights Reserved.
-    </footer>
+<script src="assets/js/script.js"></script>
 
 </body>
 </html>
