Revamp contact.html for improved design and functionality
Updated contact page layout and content for better user experience.

--- a/contact.html
+++ b/contact.html
@@ -4,57 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | PlannerSupport4U</title>
-
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
 
-    <!-- NAVBAR -->
-    <nav class="navbar">
-        <div class="logo">PlannerSupport4U</div>
-        <div class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html" class="active">Contact</a>
-        </div>
+<!-- NAVBAR -->
+<header class="navbar">
+    <div class="logo">PlannerSupport4U</div>
+    <nav class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html" class="active">Contact</a>
     </nav>
+</header>
 
-    <!-- CONTACT HEADER -->
-    <section class="hero">
-        <h1>Get in Touch</h1>
-        <p>Need help with Microsoft Planner or Office 365? Send a message below.</p>
-    </section>
+<!-- HERO SMALL -->
+<section class="hero small-hero">
+    <h1>Contact Me</h1>
+    <p>Fast, personal Microsoft Planner & Office 365 support</p>
+</section>
 
-    <!-- CONTACT FORM SECTION -->
-    <section class="section">
-        <h2 class="section-title">Contact Me</h2>
+<!-- CONTACT SECTION -->
+<section class="section">
+    <h2 class="section-title">Get in Touch</h2>
 
-        <div class="contact-form">
-            <form action="https://formspree.io/f/mgejqyqr" method="POST">
+    <div class="contact-form">
+        <form action="#" method="post">
 
-                <input type="text" name="name" placeholder="Your Name" required>
+            <label>Your Name</label>
+            <input type="text" placeholder="Enter your name" required>
 
-                <input type="email" name="email" placeholder="Your Email" required>
+            <label>Your Email</label>
+            <input type="email" placeholder="Enter your email" required>
 
-                <textarea name="message" rows="5" placeholder="Describe your issue..." required></textarea>
+            <label>Your Issue</label>
+            <textarea rows="5" placeholder="Describe your Microsoft Planner or Office 365 issue..." required></textarea>
 
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
+            <button class="btn" type="submit">Submit Request</button>
+        </form>
+    </div>
 
-        <br><br>
-        
-        <p style="text-align:center; font-size:1rem; color:#555;">
-            Or email directly at:<br>
-            <strong>seannroberts754@gmail.com</strong>
-        </p>
-    </section>
+    <div class="contact-extra">
+        <h3>Direct Support</h3>
+        <p>If you need quick help, I offer 1-on-1 guided support sessions.</p>
+        <p><strong>Response Time:</strong> Within 2–5 minutes (most cases)</p>
+    </div>
+</section>
 
-    <!-- FOOTER -->
-    <footer>
-        © 2025 PlannerSupport4U — All Rights Reserved.
-    </footer>
+<!-- FOOTER -->
+<footer>
+    © 2025 PlannerSupport4U — All Rights Reserved.
+</footer>
+
+<script src="assets/js/script.js"></script>
 
 </body>
 </html>
